--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <div class="center-text">
     Let's go Longhorns
   </div>
+  <img src="https://i.imgur.com/kj6n0sY.png" alt="Running Bull" class="running-bull" />
 </body>
 </html>
