--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
   <div class="center-text">
-    Let's go Longhorns
+    Let's Go Longhorns
   </div>
+  
+  <!-- Longhorn Bull -->
   <img src="https://i.imgur.com/kj6n0sY.png" alt="Running Bull" class="running-bull" />
 </body>
 </html>
