--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   </div>
   
   <!-- Longhorn Bull -->
-  <img src="https://i.imgur.com/kj6n0sY.png" alt="Running Bull" class="running-bull" />
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Texas_Longhorns_logo.svg/1200px-Texas_Longhorns_logo.svg.png" 
+       alt="Running Bull" 
+       class="running-bull" />
 </body>
 </html>
